# execution-chain

./: CMakeLists.txt  README.md
execution_chain/: ExecutionChain.h  ExecutionFlow.h  polymorphic_value.h
tests/: TestExecutionChain.cpp
